name:                hakyll-moe
version:             0.1.0.0
synopsis:            moe-haakyll is a thin wrapper for moe with Hakyll. 
-- description:
homepage:            https://github.com/eliza0x/hakyll-moe#readme
license:             MIT
license-file:        LICENSE
author:              Eliza0x
maintainer:          me@eliza.link
copyright:           2017 Eliza0x.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , moe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eliza0x/hakyll-moe
